# file-explorer

./: .gitignore  QUICKSTART.md  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  Test.tsx  global.d.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: Breadcrumb.tsx  Flex.tsx  Layout.tsx  ListItem.tsx  ResizeHandle.tsx  Sunburst.tsx  Tooltip.tsx
src/const/: colors.ts
src/mock/: data.ts
src/store/: fileExplorer.ts
src/types/: FileNode.ts
src/utils/: colorAssigner.ts  format.ts
