[package]
name = "file_explorer"
version = "0.1.0"
description = "A beautiful file system visualization tool"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
walkdir = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

